<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="swantekp.swantekpremotecontrol.ConfigureFavorites">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Configure Favorite Channels"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/remote_control_label_font"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorite\nChannel\nButton"
            android:layout_marginEnd="15dp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/left_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Left"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/middle_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Middle"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/right_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Right"
                android:layout_weight="1"/>



        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Label:"
            android:layout_marginEnd="25dp"
            />

        <EditText
            android:id="@+id/new_favorite_channel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:imeOptions="actionDone"
            android:textSize="25sp"
            android:gravity="center"
           />


    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:text="@string/channel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="start"

                android:layout_marginEnd="15dp"
                />
            <TextView
                android:id="@+id/new_favorite_channel_number"
                android:text="0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="75dp"


        >
        <TableRow>
            <Button
                android:id="@+id/zero_button"
                android:text="@string/zero_button"
                android:layout_column="2"
                />
            <Button
                android:id="@+id/one_button"
                android:text="@string/one_button"
                />
            <Button
                android:id="@+id/two_button"
                android:text="@string/two_button"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/three_button"
                android:text="@string/three_button"
                android:layout_column="2"
                />
            <Button
                android:id="@+id/four_button"
                android:text="@string/four_button"
                />
            <Button
                android:id="@+id/five_button"
                android:text="@string/five_button"
                />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/six_button"
                android:text="@string/six_button"
                android:layout_column="2"
                />
            <Button
                android:id="@+id/seven_button"
                android:text="@string/seven_button"
                />
            <Button
                android:id="@+id/eight_button"
                android:text="@string/eight_button"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/nine_button"
                android:text="@string/nine_button"
                android:layout_column="2"
                />
            <Button
                android:id="@+id/CH_plus_button"
                android:text="@string/plus_button"
                />
            <Button
                android:id="@+id/CH_minus_button"
                android:text="@string/minus_button"
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/configure_cancel_button"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/configure_save_button"
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>
